--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -4,7 +4,7 @@ Login page
 /* bg color */
  
 .login {
-  background-image: url(/assets/food-illustration-social.jpg);
+  background-image: url(/assets/ReviewFilm.jpg);
   background-size: 100% ;
   background-repeat: no-repeat;
 }
