--- a/app/views/static_pages/_set_up_process.html.erb
+++ b/app/views/static_pages/_set_up_process.html.erb
@@ -4,7 +4,7 @@
 		color: #1c9963;background-color: transparent;padding: 10px;margin-top: 15px;">Continue to last step</button></a>
 
 		<div class="" style="letter-spacing: 0;font-weight: 400;font-style: normal; margin-top: 15px;
-		line-height: 1.1;font-size: 20px;color: rgba(0,0,0,.8);">Welcome to <div style="display: inline-block;font-family: 'Pacifico', cursive;font-size: 25px">YumYum</div> </div>
+		line-height: 1.1;font-size: 20px;color: rgba(0,0,0,.8);">Welcome to <div style="display: inline-block;font-family: 'Pacifico', cursive;font-size: 25px">しば犬</div> </div>
 		<div style="margin-top: 14px">
 			<small class="" style="font-size: 15px;margin-bottom: 10px;color: rgba(0,0,0,.44);line-height: 1.6">Sign up
 				<span class="" style="">
