--- a/app/views/static_pages/preset_avatar.html.erb
+++ b/app/views/static_pages/preset_avatar.html.erb
@@ -20,57 +20,57 @@
 				});
 			</script>
 		<div style="margin: 0;padding: 0" class="form-group">
-			<div  class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/xtra_med/2L_YiCLXKVTBGu9LgoelMA.jpg);">
+			<div  class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button id="cookie" class="tag-button" data-toggle="buttons">
-				<span style="">Cookie</span> </button>	
+				<span style="">Hành Động</span> </button>	
 			</div>
-			<div   class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/oldImages/xtra_med/1251_1_1438765718.jpg);">
+			<div   class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button id="drink" class="tag-button" data-toggle="buttons">
-				<span style="">Drink</span> </button>	
+				<span style="">Viễn Tưởng</span> </button>	
 			</div>
-			<div  class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/oldImages/xtra_med/62_36_1429634659.jpg);">
+			<div  class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button id="pizza" class="tag-button" data-toggle="buttons">
-				<span style="">Pizza</span> </button>	
+				<span style="">Kinh Dị</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/xtra_med/3YwFx9Ivasz81tvrHOp7b4.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Roast</span> </button>	
+				<span style="">Tâm lý</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/xtra_med/C_ElwWUEKRr9mprhtoNsUZ.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Soup</span> </button>	
+				<span style="">Tình Cảm</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/xtra_med/BnGJRBJn4WqAcIfEaD3fK5.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons" >
-				<span class="tag-span">Vegetable</span> </button>	
+				<span class="tag-span">Hoạt Hình</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/oldImages/xtra_med/1309_1_1436535868.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Curry</span> </button>	
+				<span style="">Tình Yêu</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/xtra_med/BN7uFbf_ad7A8QeqJJyVTp.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Bread</span> </button>	
+				<span style="">Gia đình</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/xtra_med/Dld7Zgqi47t9qE99h-FuMc.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Salad</span> </button>	
+				<span style="">Hài Hước</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/oldImages/xtra_med/690_1_1371117915.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Sandwiches</span> </button>	
+				<span style="">Cổ Trang</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/oldImages/xtra_med/1311_13_1438681398.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">BBQ Food</span> </button>	
+				<span style="">Phiêu lưu</span> </button>	
 			</div>
-			<div class="tag-token btn-group" style="background-image: url(http://cdn.jamieoliver.com/recipe-database/xtra_med/1_2Z7b-e4WBAOs15cYpTA7.jpg);">
+			<div class="tag-token btn-group" style="background-image: url(https://i.ytimg.com/vi/YPqXu7jJh-M/maxresdefault.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Cake & tea</span> </button>	
+				<span style="">Phim chiếu rạp</span> </button>	
 			</div>
 			<div class="tag-token btn-group" style="background-image: url(//cdn.jamieoliver.com/recipe-database/oldImages/xtra_med/538_1_1436889976.jpg);">
 				<button class="tag-button" data-toggle="buttons">
-				<span style="">Pasta bakes</span> </button>	
+				<span style="">Phim Việt Nam</span> </button>	
 			</div>
 
 		</div>
