--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -34,7 +34,7 @@
 
     <li style="padding: 0px 30px 10px">
       <p style="border-bottom: solid 1px #dbdbdb;padding-bottom: 10px;font-family: 'Open Sans', sans-serif;color: #777">About</p>
-      <span style="font-family: 'Open Sans', sans-serif; color: #1d1b1f;font-size: 17px;font-weight: 500">Co-Founder  Producer at YumYum</span>
+      <span style="font-family: 'Open Sans', sans-serif; color: #1d1b1f;font-size: 17px;font-weight: 500">Co-Founder  Producer at しば犬</span>
     </li>
     <li style="padding: 0px 30px 30px">
       <p style="border-bottom: solid 1px #dbdbdb;padding-bottom: 10px;font-family: 'Open Sans', sans-serif;color: #777">Interests</p>
