--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
   text-align: center;
   font-size: 28px;
   font-weight: 800 !important;
-  font-family: 'Pacifico', cursive;margin-top: 40px;text-decoration: none"><span>YumYum</span> </a>  
+  font-family: 'Pacifico', cursive;margin-top: 40px;text-decoration: none"><span>しば犬</span> </a>  
       </div>
       <div style="display: inline-block;margin-left: 150px">
             <%= form_for :search, url: search_path do |f| %>
