--- a/app/views/static_pages/find_friend.html.erb
+++ b/app/views/static_pages/find_friend.html.erb
@@ -6,7 +6,7 @@
 		color: #dbdbdb;background-color: transparent;padding: 10px 20px;margin: 15px 15px 0 0;">Back</button></a>
 
 		<div class="" style="letter-spacing: 0;font-weight: 400;font-style: normal; margin-top: 15px;
-		line-height: 1.1;font-size: 20px;color: rgba(0,0,0,.8);">Welcome to <div style="display: inline-block;font-family: 'Pacifico', cursive;font-size: 25px">YumYum</div> </div>
+		line-height: 1.1;font-size: 20px;color: rgba(0,0,0,.8);">Welcome to <div style="display: inline-block;font-family: 'Pacifico', cursive;font-size: 25px">しば犬</div> </div>
 		<div style="margin-top: 14px">
 			<small class="" style="font-size: 15px;margin-bottom: 10px;color: rgba(0,0,0,.44);line-height: 1.6">Sign up
 				<span class="" style="">
@@ -79,7 +79,7 @@
 					</a>
 				</li>
 				<li style="list-style: none">
-					<span style="font-family: 'Open Sans', sans-serif;color: #6c7a8d">Co-Founder Producer at YumYum</span>
+					<span style="font-family: 'Open Sans', sans-serif;color: #6c7a8d">Co-Founder Producer at しば犬</span>
 					<button class="btn btn-success uppercase" style="background-color: #6c7a8d; border: 0px;float: right;">Follow</button>
 				</li>
 				<li style="list-style: none;border-bottom: 1px solid #dbdbdb;padding-bottom: 30px" >
@@ -94,11 +94,11 @@
 			<ul style="margin: 20px">
 			 	<li style="list-style: none">
 					<a href="" style="text-decoration: none;font-family: 'Open Sans', sans-serif;font-weight: 700;font-size: 17px;line-height: 1.7;font-weight: bold;">
-						<span>toanmx</span>
+						<span>anhtu</span>
 					</a>
 				</li>
 				<li style="list-style: none">
-					<span style="font-family: 'Open Sans', sans-serif;color: #6c7a8d">Co-Founder Producer at YumYum</span>
+					<span style="font-family: 'Open Sans', sans-serif;color: #6c7a8d">Co-Founder Producer at しば犬</span>
 					<button class="btn btn-success uppercase" style="background-color: #6c7a8d; border: 0px;float: right;">Follow</button>
 				</li>
 				<li style="list-style: none;border-bottom: 1px solid #dbdbdb;padding-bottom: 30px" >
